@@ -1,5 +1,5 @@
 #
-# $Id: aquaTheme.tcl,v 1.13 2008/07/22 17:01:46 das Exp $
+# $Id: aquaTheme.tcl,v 1.14 2009/07/15 21:50:40 das Exp $
 #
 # Aqua theme (OSX native look and feel)
 #
@@ -31,9 +31,10 @@ namespace eval ttk::theme::aqua {
 
 	ttk::style configure TButton -anchor center -width -6
 	ttk::style configure Toolbutton -padding 4
-	# See Apple HIG figs 14-63, 14-65
-	ttk::style configure TNotebook -tabposition n -padding {20 12}
-	ttk::style configure TNotebook.Tab -padding {10 2 10 2}
+
+	ttk::style configure TNotebook -tabmargins {10 0} -tabposition n
+	ttk::style configure TNotebook -padding {18 8 18 17}
+	ttk::style configure TNotebook.Tab -padding {12 3 12 2}
 
 	# Combobox:
 	ttk::style configure TCombobox -postoffset {5 -2 -10 0}
